-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.3
-
None
-
09ef067aef8a1f247465e3b02459056b11c01460 (qt/qtdeclarative/dev) 011618484bd9fad772e0145806689eacd27b08e2 (qt/qtdeclarative/6.2)
Full test output:
16:22:46: Starting /Users/mitch/dev/qt-dev-debug-non-fw/qtquickcontrols2/tests/auto/dialogs/qquickfiledialogimpl/tst_qquickfiledialogimpl ... ********* Start testing of tst_QQuickFileDialogImpl ********* Config: Using QtTest library 6.2.0, Qt 6.2.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by Clang 12.0.5 (clang-1205.0.22.11) (Apple)), macos 11.4 PASS : tst_QQuickFileDialogImpl::initTestCase() QWARN : tst_QQuickFileDialogImpl::defaults() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:151:13: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::defaults() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:150:13: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::defaults() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:69:9: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::defaults() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:68:9: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::defaults() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/TextField.qml:63:9: TypeError: Cannot read property 'width' of null PASS : tst_QQuickFileDialogImpl::defaults() QWARN : tst_QQuickFileDialogImpl::chooseFileViaStandardButtons() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:151:13: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaStandardButtons() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:150:13: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaStandardButtons() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:69:9: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaStandardButtons() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:68:9: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaStandardButtons() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/TextField.qml:63:9: TypeError: Cannot read property 'width' of null PASS : tst_QQuickFileDialogImpl::chooseFileViaStandardButtons() QWARN : tst_QQuickFileDialogImpl::chooseFileViaDoubleClick() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:151:13: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaDoubleClick() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:150:13: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaDoubleClick() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:69:9: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaDoubleClick() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:68:9: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaDoubleClick() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/TextField.qml:63:9: TypeError: Cannot read property 'width' of null PASS : tst_QQuickFileDialogImpl::chooseFileViaDoubleClick() QWARN : tst_QQuickFileDialogImpl::chooseFileViaTextEdit() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:151:13: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaTextEdit() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:150:13: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaTextEdit() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:69:9: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaTextEdit() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:68:9: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaTextEdit() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/TextField.qml:63:9: TypeError: Cannot read property 'width' of null PASS : tst_QQuickFileDialogImpl::chooseFileViaTextEdit() QWARN : tst_QQuickFileDialogImpl::chooseFileViaEnter() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:151:13: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaEnter() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:150:13: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaEnter() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:69:9: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaEnter() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:68:9: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::chooseFileViaEnter() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/TextField.qml:63:9: TypeError: Cannot read property 'width' of null PASS : tst_QQuickFileDialogImpl::chooseFileViaEnter() QWARN : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir) qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:151:13: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir) qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:150:13: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir) qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:69:9: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir) qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:68:9: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir) qrc:/qt-project.org/imports/QtQuick/Controls/Basic/TextField.qml:63:9: TypeError: Cannot read property 'width' of null PASS : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir) QWARN : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir/sub-file1.txt) qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:151:13: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir/sub-file1.txt) qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:150:13: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir/sub-file1.txt) qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:69:9: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir/sub-file1.txt) qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:68:9: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir/sub-file1.txt) qrc:/qt-project.org/imports/QtQuick/Controls/Basic/TextField.qml:63:9: TypeError: Cannot read property 'width' of null PASS : tst_QQuickFileDialogImpl::bindCurrentFolder(sub-dir/sub-file1.txt) QWARN : tst_QQuickFileDialogImpl::changeFolderViaStandardButtons() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:151:13: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::changeFolderViaStandardButtons() qrc:/qt-project.org/imports/QtQuick/Dialogs/quickimpl/qml/FileDialog.qml:150:13: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::changeFolderViaStandardButtons() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:69:9: TypeError: Cannot read property 'height' of undefined QWARN : tst_QQuickFileDialogImpl::changeFolderViaStandardButtons() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/DialogButtonBox.qml:68:9: TypeError: Cannot read property 'width' of undefined QWARN : tst_QQuickFileDialogImpl::changeFolderViaStandardButtons() qrc:/qt-project.org/imports/QtQuick/Controls/Basic/TextField.qml:63:9: TypeError: Cannot read property 'width' of null PASS : tst_QQuickFileDialogImpl::changeFolderViaStandardButtons() AddressSanitizer:DEADLYSIGNAL ================================================================= ==78560==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000008 (pc 0x00010dff8340 bp 0x7ffeeab9e030 sp 0x7ffeeab9e020 T0) ==78560==The signal is caused by a READ memory access. ==78560==Hint: address points to the zero page. #0 0x10dff8340 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::get() const qscopedpointer.h:147 #1 0x10e27f004 in decltype(fp.get()) qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > const>(QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > const&) qglobal.h:1267 #2 0x10e4902cd in QWindow::d_func() const qwindow.h:101 #3 0x10e4ac8e8 in QWindow::mapToGlobal(QPointF const&) const qwindow.cpp:2707 #4 0x10722c517 in QQuickDeliveryAgentPrivate::deliverHoverEventToItem(QQuickItem*, QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long, bool) qquickdeliveryagent.cpp:1079 #5 0x107223b17 in QQuickDeliveryAgentPrivate::deliverHoverEvent(QPointF const&, QPointF const&, QFlags<Qt::KeyboardModifier>, unsigned long) qquickdeliveryagent.cpp:995 #6 0x107243d96 in QQuickDeliveryAgentPrivate::flushFrameSynchronousEvents(QQuickWindow*) qquickdeliveryagent.cpp:1520 #7 0x106d2e4f6 in QQuickWindowPrivate::flushFrameSynchronousEvents() qquickwindow.cpp:1610 #8 0x107841fdc in QSGThreadedRenderLoop::polishAndSync(QSGThreadedRenderLoop::Window*, bool) qsgthreadedrenderloop.cpp:1516 #9 0x107843a0b in QSGThreadedRenderLoop::handleUpdateRequest(QQuickWindow*) qsgthreadedrenderloop.cpp:1383 #10 0x106d2c81a in QQuickWindow::event(QEvent*) qquickwindow.cpp:1502 #11 0x11429c3da in QCoreApplicationPrivate::notify_helper(QObject*, QEvent*) qcoreapplication.cpp:1222 #12 0x11429b59a in doNotify(QObject*, QEvent*) qcoreapplication.cpp:1151 #13 0x11429b766 in QCoreApplication::notify(QObject*, QEvent*) qcoreapplication.cpp:1137 #14 0x10e2b0c49 in QGuiApplication::notify(QObject*, QEvent*) qguiapplication.cpp:1942 #15 0x11429b2b9 in QCoreApplication::notifyInternal2(QObject*, QEvent*) qcoreapplication.cpp:1061 #16 0x11429df51 in QCoreApplication::sendEvent(QObject*, QEvent*) qcoreapplication.cpp:1469 #17 0x10e4278cf in QPlatformWindow::deliverUpdateRequest() qplatformwindow.cpp:810 #18 0x1193cf0e7 in QCocoaWindow::deliverUpdateRequest() qcocoawindow.mm:1546 #19 0x119399af5 in QCocoaScreen::deliverUpdateRequests() qcocoascreen.mm:533 #20 0x119399f0b in invocation function for block in QCocoaScreen::deliverUpdateRequests() qcocoascreen.mm:497 #21 0x112236bea in __wrap_dispatch_source_set_event_handler_block_invoke+0xca (libclang_rt.asan_osx_dynamic.dylib:x86_64h+0x47bea) #22 0x7fff2037d805 in _dispatch_client_callout+0x7 (libdispatch.dylib:x86_64+0x3805) #23 0x7fff203801af in _dispatch_continuation_pop+0x1a6 (libdispatch.dylib:x86_64+0x61af) #24 0x7fff20390563 in _dispatch_source_invoke+0x80c (libdispatch.dylib:x86_64+0x16563) #25 0x7fff20389a07 in _dispatch_main_queue_callback_4CF+0x264 (libdispatch.dylib:x86_64+0xfa07) #26 0x7fff2065d5e7 in __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__+0x8 (CoreFoundation:x86_64h+0xbe5e7) #27 0x7fff2061f7d1 in __CFRunLoopRun+0xac2 (CoreFoundation:x86_64h+0x807d1) #28 0x7fff2061e64b in CFRunLoopRunSpecific+0x232 (CoreFoundation:x86_64h+0x7f64b) #29 0x7fff2885cab2 in RunCurrentEventLoopInMode+0x123 (HIToolbox:x86_64+0x30ab2) #30 0x7fff2885c6e5 in ReceiveNextEventCommon+0x11b (HIToolbox:x86_64+0x306e5) #31 0x7fff2885c5b2 in _BlockUntilNextEventMatchingListInModeWithFilter+0x45 (HIToolbox:x86_64+0x305b2) #32 0x7fff22e1f6f1 in _DPSNextEvent+0x35f (AppKit:x86_64+0x3e6f1) #33 0x7fff22e1dec4 in -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:]+0x553 (AppKit:x86_64+0x3cec4) #34 0x1193585b8 in QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) qcocoaeventdispatcher.mm:482 #35 0x11429c697 in QCoreApplication::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) qcoreapplication.cpp:1284 #36 0x10653e837 in bool QTest::qWaitFor<QQuickTest::qWaitForItemPolished(QQuickItem const*, int)::$_0>(QQuickTest::qWaitForItemPolished(QQuickItem const*, int)::$_0, int) qtestsupport_core.h:75 #37 0x10653e4f3 in QQuickTest::qWaitForItemPolished(QQuickItem const*, int) quicktest.cpp:129 #38 0x105073f43 in QQuickVisualTestUtil::findViewDelegateItem(QQuickItemView*, int, QFlags<QQuickVisualTestUtil::FindViewDelegateItemFlag>) visualtestutil.cpp:110 #39 0x1050bc042 in bool QQuickVisualTestUtil::findViewDelegateItem<QQuickFileDialogDelegate*>(QQuickItemView*, int, QQuickFileDialogDelegate*&, QFlags<QQuickVisualTestUtil::FindViewDelegateItemFlag>) visualtestutil.h:140 #40 0x1050dd4e4 in tst_QQuickFileDialogImpl::changeFolderViaDoubleClick() tst_qquickfiledialogimpl.cpp:543 #41 0x10514f674 in tst_QQuickFileDialogImpl::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) tst_qquickfiledialogimpl.moc:185 #42 0x11430f5be in QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const qmetaobject.cpp:2384 #43 0x111f3d482 in QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const qmetaobject.h:126 #44 0x111f3adf7 in QTest::TestMethods::invokeTestOnData(int) const qtestcase.cpp:949 #45 0x111f3e5ed in QTest::TestMethods::invokeTest(int, char const*, QTest::WatchDog*) const qtestcase.cpp:1181 #46 0x111f45214 in QTest::TestMethods::invokeTests(QObject*) const qtestcase.cpp:1524 #47 0x111f47667 in QTest::qRun() qtestcase.cpp:1952 #48 0x111f462c7 in QTest::qExec(QObject*, int, char**) qtestcase.cpp:1859 #49 0x10514f27a in main tst_qquickfiledialogimpl.cpp:1346 #50 0x7fff20542f5c in start+0x0 (libdyld.dylib:x86_64+0x15f5c) ==78560==Register values: rax = 0x0000000000000008 rbx = 0x00007ffeeab9e200 rcx = 0x0000100000000001 rdx = 0x0000100000000000 rdi = 0x0000000000000008 rsi = 0x00007ffeeab9e0e0 rbp = 0x00007ffeeab9e030 rsp = 0x00007ffeeab9e020 r8 = 0x00007ffeeab9e120 r9 = 0x00007ffeeab9e140 r10 = 0x00007ffeeab9e160 r11 = 0x00007ffeeab9e180 r12 = 0x00007ffeeab9e1e0 r13 = 0x00001fffdd573c10 r14 = 0x00007ffeeab9e1a0 r15 = 0x00007ffeeab9e1c0 AddressSanitizer can not provide additional info. SUMMARY: AddressSanitizer: SEGV qscopedpointer.h:147 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::get() const ==78560==ABORTING 16:23:03: The program has unexpectedly finished. 16:23:03: The process was ended forcefully. 16:23:03: /Users/mitch/dev/qt-dev-debug-non-fw/qtquickcontrols2/tests/auto/dialogs/qquickfiledialogimpl/tst_qquickfiledialogimpl crashed.
- relates to
-
QTBUG-94991 Warnings in FileDialog
-
- Reported
-