QQuickDeliveryAgent: Use public mapToGlobal function

In deliverHoverEventToItem, we were calling mapToGlobal on
QQuickItemPrivate::window. However, that pointer might be null. Use the
public mapToGlobal function of QQuickItem instead to handle that case.

Fixes: QTBUG-94970
Change-Id: Icce9ceb722f4cd6dc7fa8c296f463e6facb4595e
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 09ef067aef8a1f247465e3b02459056b11c01460)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>